WIP, legger til næring, bør hente næring for virksomhetsiste4kvartaler